Fixed components, added z-index.

--- a/css/ide/toolbar.css
+++ b/css/ide/toolbar.css
@@ -4,7 +4,7 @@
     height:                         40px;
     background-color:               var(--ui-background2);
     margin:                         0;
-    border:                         transparent;
+    border:                         var(--ui-border1);
     border-width:                   0 0 1px 0;
 }
 .resource-options .space {
